fix(QRButtons): improved styling and alignment

--- a/app/routes/users/components/UserProfile.css
+++ b/app/routes/users/components/UserProfile.css
@@ -42,6 +42,16 @@ html[data-theme='dark'] .emptyState {
   margin-top: 0.5rem;
 }
 
+.qrIcon {
+  display: flex;
+  align-items: center;
+  margin-right: 0.2rem;
+}
+
+.frameMargin {
+  margin-top: 6.5rem;
+}
+
 .picture {
   flex-direction: column;
   display: flex;
